// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`'template literal ending with a space' > expectation 1`] = `
"export default function Test() {
  return (
    <div>
      {[0, 1, 2, 3].map((key) => {
        return (
          <div key={key} className={\`\${key ? "relative " : ""} tablet:static\`}>
            {key}
          </div>
        );
      })}
    </div>
  );
}
"
`;

exports[`'template literal starting with a space' > expectation 1`] = `
"export default function Test() {
  return (
    <div>
      {[0, 1, 2, 3].map((key) => {
        return (
          <div key={key} className={\`\${key ? " relative" : ""} tablet:static\`}>
            {key}
          </div>
        );
      })}
    </div>
  );
}
"
`;

exports[`'trimmed template literal (no error in…' > expectation 1`] = `
"export default function Test() {
  return (
    <div>
      {[0, 1, 2, 3].map((key) => {
        return (
          <div key={key} className={\`\${key ? "relative" : ""} tablet:static\`}>
            {key}
          </div>
        );
      })}
    </div>
  );
}
"
`;
